# cse-341-project2/routes/api.js
@@ -1,7 +1,0 @@
-const express = require('express');
-const router = express.Router();
-const contactsRoutes = require('./contacts');
-
-router.use('/contacts', contactsRoutes);
-
-module.exports = router;
